tests/negative/test_switch_case_no_expr.orb
fnc main() {
    switch (1) {
    case: ret;
    }
}